<?xml version="1.0" encoding="utf-8"?>

<!--
strings.xml - Holds values of string variables in an xml file.
@author Tyler Holmgren
TylerHolmgren@TJH.PW
-->

<resources>
    <string name="app_name">SCC Notifications</string>
    <string name="Button1">NM\nEvents</string>
    <string name="Button2">FB\nEvents</string>
    <string name="Button3">NM\nStudent Life</string>
    <string name="Button4">FB\nStudent Life</string>
    <string name="Button5">D2L\nCancelled\nClasses</string>
    <string name="Button6">Academic\nCalendar</string>
    <string name="Link1">https://www.google.com/calendar/feeds/4d5opepfgh3vfb5ds7fuvkoon0%40group.calendar.google.com/public/basic</string><!-- North Mankato Events ATOM -->
    <string name="Link2">https://www.google.com/calendar/feeds/5jp8dgr34i6gogusn1o9kvc5ds%40group.calendar.google.com/public/basic</string><!-- Faribault Events ATOM -->
    <string name="Link3">https://www.google.com/calendar/feeds/n5tqq9gp1ku7rel462df55a704%40group.calendar.google.com/public/basic</string><!-- Student Life North Mankato ATOM -->
    <string name="Link4">https://www.google.com/calendar/feeds/s377a9ptglfvjsk5tcqgem3fkg%40group.calendar.google.com/public/basic</string><!-- Student Life Faribault ATOM -->
    <string name="Link5">http://cfapp.southcentral.edu/calendar/cancelled_classes/rss_today_future.xml</string><!-- D2L Canceled Courses RSS -->
    <string name="Link6">https://www.google.com/calendar/feeds/8topte2rmjjkjmev61f69oelk8%40group.calendar.google.com/public/basic</string><!-- Academic Calendar ATOM -->
    <string name="RssTitle">Title</string>
    <string name="RssDate">Date</string>
    <string name="RssDetail">Description</string>
    <string name="AtomTitle">Title</string>
</resources>